다니엘 성 수정

--- a/src/assets/i18n/kr.json
+++ b/src/assets/i18n/kr.json
@@ -8,7 +8,7 @@
         "Electric Guitar": "일렉기타",
         "Jiyong Choi": "최지용",
         "Bass Guitar": "베이스",
-        "Danielle Pak": "다니엘",
+        "Danielle Pak": "박다니엘",
         "Keyboard": "키보드",
         "Min Kim": "김민균",
         "Drum": "드럼",
